Fix wording and display on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -425,7 +425,7 @@ nav.tags {
 
 .wrapper > .post {
 
-  padding: 3em 6em;
+  padding: 3em 14em;
 
   @include media-query($on-laptop) {
     padding: 2em 4em;
