--- a/css/main.scss
+++ b/css/main.scss
@@ -70,6 +70,3 @@ $on-desktop:       1279px;
 .quote p {
   display: inline;
 }
-.wrapper > .post {
-  padding: 3em 14em; 
-}
